Fix display of heading on smaller displays

--- a/home/static/home/css/home.css
+++ b/home/static/home/css/home.css
@@ -33,7 +33,7 @@ img {
     #info {
         font-size: 2px;
         padding: 2rem;
-        margin-top: 2rem;
+        margin-top: 3rem;
     }
 
     #our-story {
